# ren-econ

./: .gitignore  README.md  pyproject.toml
ren_econ/: __main__.py  cli.py  config.py
ren_econ/db/: __init__.py  repositories.py  seed.py
ren_econ/models/: __init__.py  cashflow.py  costs.py  ppa.py  project.py
ren_econ/report/: __init__.py  build.py  hub.py  merit_order.py
ren_econ/report/templates/: dashboard.html.j2  hub.html.j2  merit_order_standalone.html.j2
scripts/: bootstrap_dashboard.sh  check_toolchain.py
