[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ren-econ"
version = "0.1.0"
description = "Onshore wind project economics: DCF, PPA breakeven, HTML dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "jinja2>=3.1",
  "plotly>=5.18",
  "folium>=0.16",
  "pyxirr>=0.10",
]

[project.scripts]
ren-econ = "ren_econ.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ren_econ"]

[tool.ruff]
line-length = 100
target-version = "py311"
